Updates file when it has changed